package seta.proto.taxi;

message TaxiMessage {
  required int32 id = 1;
  required double startX = 2;
  required double startY = 3;
  required int32 port = 4;
  required string ip = 5;
}

message AddResponse {
  required bool added = 1;
}

service TaxiService {
  rpc AddTaxi(TaxiMessage) returns (AddResponse);
}